--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
     <title>JQuery Practice</title>
 </head>
 <body>
+    <h1 class="topic">Selectors</h1>
     <div class="main-div">
-        <h3>
-            Hey Tabrez 👋
-        </h3>
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum sit deserunt corporis laborum non consequatur vero. Qui eum asperiores, reiciendis consequatur, dolor porro natus numquam alias vero iusto animi cupiditate.
-        </p>
+        <ul id="listing">
+            <li>Tom & Jerry</li>
+            <li>Scooby-doo</li>
+            <li>Micky Mouse</li>
+            <li>Super Man</li>
+            <li>Road Runner</li>
+        </ul>
     </div>
+    <button>Run</button>
     <script src="/jquery.js"></script>
     <script>
-        $(document).ready(function(){
-            alert("Jquery Plugged In!");
+        $(document).click(function(){
+            $('#listing').css('color', 'blue');
         })
     </script>
 </body>
