--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="/jquery.js"></script>
     <script>
         $(document).click(function(){
-            $('#listing li').css('border', '2px solid blue');
+            $('.main-div').css('background-color', 'orange');
         })
     </script>
 </body>
