--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="/jquery.js"></script>
     <script>
         $(document).click(function(){
-            $('.main-div').css('background-color', 'orange');
+            $('li').css('color', 'orange');
         })
     </script>
 </body>
