--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="/jquery.js"></script>
     <script>
         $(document).click(function(){
-            $('.main-div, button').css('border', '2px solid orange');
+            $('li:first').css('border', '2px solid orange');
         })
     </script>
 </body>
