Psuedo Selector :odd
will target only old elements of whatever parent is targeted

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="/jquery.js"></script>
     <script>
         $(document).click(function(){
-            $('li:even').css('border', '2px solid orange');
+            $('li:odd').css('border', '2px solid orange');
         })
     </script>
 </body>
