--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
         $('.main-div').contextmenu(function(){
             $(this).css('background-color', 'red')
         })
+        
+        $('.main-div').mouseenter(function(){
+            $(this).css('background-color', 'lime')
+        })
 
     </script>
 </body>
