--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <li>
             contextmenu()
         </li>
-        <li class="active">
+        <li>
             mouseenter()
         </li>
-        <li>
+        <li class="active">
             mouseleave()
         </li>
         <li>
@@ -59,6 +59,10 @@
         
         $('.main-div').mouseenter(function(){
             $(this).css('background-color', 'lime')
+        })
+
+        $('.main-div').mouseleave(function(){
+            $(this).css('background-color', 'yellow')
         })
 
     </script>
