--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
             $(this).css('background-color', '#f846da')
         })
 
+        $('.main-div').mouseup(function(){
+            $(this).css('background-color', '#454545')
+        })
 
     </script>
 </body>
