--- a/index.html
+++ b/index.html
@@ -8,18 +8,57 @@
     <title>JQuery Practice</title>
 </head>
 <body>
+    <h1 class="topic">Window Events</h1>
+    <ul id="topic-listing">
+        <li class="active">
+            scroll()
+        </li>
+        <li>
+            resize()
+        </li>
+    </ul>
     <div class="main-div">
         <h3>
             Hey Tabrez 👋
         </h3>
         <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum sit deserunt corporis laborum non consequatur vero. Qui eum asperiores, reiciendis consequatur, dolor porro natus numquam alias vero iusto animi cupiditate.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo libero ducimus eligendi minima sunt eum aliquid pariatur inventore quam nihil, ipsum praesentium soluta quidem fuga alias eos porro voluptatibus est?
+            Molestiae asperiores alias mollitia beatae dicta dolor possimus, voluptatem reiciendis. Unde vel a repellat officiis illo aspernatur quae ex nam! Ipsum ullam sint, quos itaque incidunt quidem repellat et vitae!
+            Obcaecati nesciunt nulla placeat possimus mollitia iusto eum nam a harum at, sint esse distinctio tempore praesentium. Culpa inventore aspernatur, sequi eius ullam architecto eligendi? Eveniet rerum aliquid nam est?
+            Distinctio, reiciendis ullam! Cumque, in! Autem provident corporis ratione labore non dolore aliquid vero sapiente officia animi, minus aut vitae similique vel maxime hic distinctio explicabo alias deleniti laboriosam praesentium.
+            Nesciunt qui aliquid incidunt necessitatibus autem eos commodi obcaecati sequi nisi aperiam repudiandae possimus ad, iure sit quod placeat? Omnis non deserunt delectus voluptate quia necessitatibus ea dolorem dignissimos dolore.
+            Enim magni, odio iure ipsum a, tempora sunt similique saepe recusandae dolore expedita optio fuga at. Optio, dolorem doloribus culpa nobis, fuga consequuntur voluptatibus incidunt sunt dolor consectetur adipisci a.
+            Repellendus quam error dolores accusamus eos magni consequuntur possimus nesciunt laboriosam temporibus nulla, earum, et illum sed iste! Libero nisi molestiae voluptates maxime minus adipisci magnam sit eaque minima? Quas!
+            Labore temporibus quasi repellat cum iure facere sit et ex vitae, recusandae distinctio pariatur sapiente saepe, velit qui corporis laborum. Voluptatum illum, quisquam nostrum consequuntur voluptas iusto labore veritatis repellat!
+            Commodi ducimus similique, aperiam quaerat enim mollitia quibusdam illum explicabo eos asperiores modi provident iure. Nisi veniam nemo voluptatem labore consectetur enim nam ex iusto, quia consequuntur voluptatibus eos adipisci.
+            Nihil dolores voluptates debitis nulla necessitatibus veritatis. Illo, aliquid quos fuga sed facilis ducimus ratione magni in vitae ipsa quaerat atque repellendus recusandae delectus, rerum laudantium, consequuntur ea explicabo debitis?
+            Porro optio sed velit, omnis sit sapiente cumque magnam iure, quae quas repellendus hic adipisci nesciunt autem assumenda? Magni ex doloribus aspernatur? Consectetur, eos reiciendis libero vero nobis repudiandae alias.
+            Provident, perferendis qui commodi dolore vero iusto tempora id labore vel veritatis impedit dicta magni, eveniet quo maxime incidunt sint in deleniti? Sequi blanditiis tenetur numquam. Dolor hic tempore voluptatibus!
+            Mollitia enim quos incidunt modi harum ipsa aut ipsam inventore nostrum, laboriosam fugiat ex nemo voluptatem eius reprehenderit doloribus officiis autem consequuntur, obcaecati magni vel temporibus! Doloremque, aspernatur! Dolorem, tempore.
+            Non libero deserunt quo corporis. Consequuntur, numquam voluptatem! Nisi tempora animi error aliquid dolor, obcaecati aspernatur vitae sint, recusandae sed fugit molestiae quisquam quos officia, eligendi perferendis assumenda nihil est.
+            Optio iure incidunt corrupti numquam soluta, tempore pariatur tenetur laborum doloremque aut distinctio, maiores quibusdam provident autem. Cumque molestias quasi temporibus quam. Quam, reiciendis non doloremque fugiat deleniti illo id.
+            Voluptatum iure dolore nisi culpa, eaque asperiores dolorum reiciendis debitis eum delectus, ipsam quaerat sequi officiis corporis rem, aliquam nulla natus quisquam? Asperiores velit sint natus quos deserunt, dolore dolor?
+            Assumenda incidunt similique provident? Esse repudiandae temporibus, minus sapiente soluta officia accusamus sit sed voluptate perferendis autem eligendi perspiciatis totam! Voluptatibus, sed nesciunt laborum repellendus voluptatum fugiat neque molestiae. Aut!
+            Deleniti assumenda itaque illo quasi mollitia voluptates necessitatibus voluptate obcaecati labore sunt dignissimos magni nam temporibus quas eligendi eum, nisi asperiores ullam enim modi! Officia sed ullam quos nobis sint.
+            Nihil aliquam a minus eligendi earum exercitationem aut, incidunt corrupti repellat autem vitae quod dignissimos molestiae illo quasi dolor modi voluptates vel illum, sint architecto asperiores optio velit corporis. Et.
+            Delectus consequatur omnis, laborum maxime modi facere corrupti tempore. Eum officiis accusamus cumque, optio eos, odit nobis, ratione placeat quod porro impedit consequatur obcaecati dolorem architecto iure quos. Voluptatem, cumque.
+            Alias rem reprehenderit officia, hic, aut minus neque ipsum iusto illum deleniti mollitia. Modi officiis, dignissimos repellat doloremque fuga assumenda, quod, quae cumque soluta excepturi nemo facere harum illum laborum?
+            Voluptas adipisci culpa iste optio laborum dignissimos, amet voluptatem. Delectus laborum recusandae repellat odio consectetur quasi vel numquam asperiores laboriosam. Voluptatum sunt cum quas, alias nemo voluptatibus dolor pariatur exercitationem!
+            Ipsum excepturi ab tempore. Esse, deleniti incidunt! Deleniti corporis dolor libero autem officiis accusantium praesentium, neque error quisquam facilis incidunt itaque aperiam nisi, ab, dolorem ut quos perferendis ducimus ipsa.
+            Officiis, dolores. Quis natus labore eligendi inventore, minima molestiae ex omnis reprehenderit laudantium at neque, id ullam hic dignissimos, mollitia a blanditiis repudiandae itaque tempora voluptatem fugit. Porro, minima non!
+            Aliquid quia facere officiis! Voluptatem ipsa quas explicabo natus, quod sequi provident voluptas. Maiores autem hic error a fuga rerum vel eveniet iste corrupti, qui tempore recusandae porro dicta tempora!
+            Soluta nemo, animi eveniet quisquam excepturi dolorum et delectus itaque corrupti sunt rerum reiciendis voluptas modi earum cupiditate dolore vel deserunt. Molestiae similique odit harum atque blanditiis. Dolorem, molestiae fuga?
+            Sunt nemo necessitatibus dicta iusto cupiditate. Reiciendis eius nostrum incidunt, nulla amet eos dolore, non adipisci placeat maxime aperiam veritatis est voluptates voluptatum? Similique vel fuga commodi ipsam, est nam!
+            dolore velit voluptate debitis quam corrupti vel quia minima reprehenderit cum nihil laborum, quidem aliquam laudantium excepturi magni. Enim vel quas expedita magnam.
+            Quasi dolor tempora odio ratione sit ipsam totam voluptates magnam, eius laboriosam dolorum, ex architecto ipsa porro ipsum incidunt repudiandae doloribus quaerat in. Nulla maxime harum quasi. Quis, totam suscipit?
         </p>
     </div>
     <script src="/jquery.js"></script>
     <script>
         $(document).ready(function(){
-            alert("Jquery Plugged In!");
+           $(window).scroll(function(){
+               console.log("You are scrolling");
+           })
         })
     </script>
 </body>
