--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
     <script>
         $(document).ready(function(){
             $('button').click(function(){
-                $('h3').text('Hey, TZ ✨');
+                $('p').html('This is <b>bold</b> text.');
             })
         })
+
     </script>
 </body>
 </html>
