--- a/index.html
+++ b/index.html
@@ -16,27 +16,46 @@
         <li>
             html()
         </li>
-        <li class="active">
+        <li>
             attr()
         </li>
-        <li>
+        <li class="active">
             val()
         </li>
     </ul>
     <div class="main-div">
-        <h3>
-            Hey Tabrez 👋
-        </h3>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto consequuntur veritatis perspiciatis culpa id corrupti, facilis voluptate nostrum dolore at, obcaecati ex, deleniti atque ratione aut quisquam autem facere! In.
-        </p>
+        <form action="">
+            <div class="form-elements">
+                <input type="text" id="name" placeholder="name">
+            </div>
+            <div class="form-elements">
+                <input type="email" id="email" placeholder="email">
+            </div>
+            <div class="form-elements" id="description">
+                <textarea name="" id="description" cols="30" rows="10"></textarea>
+            </div>
+            <div class="form-elements">
+                <select>
+                    <option value="apple">Apple</option>
+                    <option value="orange">Orange</option>
+                    <option value="banana">Banana</option>
+                    <option value="pineapple">Pineapple</option>
+                    <option value="cherry">Cherry</option>
+                </select>
+            </div>
+            <button type="submit">Submit</button>
+            <button type="reset">Reset</button>
+        </form>
     </div>
-    <button>Run</button>
+    <button>Fill Form</button>
     <script src="/jquery.js"></script>
     <script>
         $(document).ready(function(){
             $('button').click(function(){
-                $('p').attr('name', 'description');
+                $('#name').val("Tabrez")
+                $('#email').val('tabrez@mail.com')
+                $('textarea').val('A Frontend Developer with expertise in Ui/Ux and a former Graphic Designer.')
+                $('select').val('orange');
              })
         })
 
